--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,16 @@
-.logo {
-    background-image:"/imgs/logo.png";
-    width: 50px;
-    height: auto;
+@font-face {
+    font-family: LovalinaRegular;
+    src: url("/fonts/LovalinafreeRegular.otf");
 }
 
-.logo-deep {
-    background-image:"../imgs/logo.png";
-    width: 50px;
+* {
+    font-family: LovalinaRegular;
+}
+
+.logo {
+    width: 150px;
     height: auto;
+    margin-right: -25px;
 }
 
 header {
@@ -19,7 +22,6 @@ header {
 }
 
 nav {
-    z-index: 2;
     width: 100%;
     height: 75px;
     display: inline-flex;
@@ -28,11 +30,11 @@ nav {
 
 nav > ul {
     width: max-content;
+    min-width: max-content;
     margin: 0 auto;
     padding: 0;
     display: inline-flex;
     flex-direction: row;
-    flex-wrap: nowrap;
     justify-content: space-around;
     align-items: center;
 }
@@ -41,15 +43,37 @@ nav > ul {
 nav > ul a {
     margin: 25px;
     padding: 5px;
-    cursor: pointer;
     text-decoration: none;
 }
 
+nav > ul a.animation-underline {
+    position: relative;
+}
+
+nav > ul a.animation-underline::before {
+    background-color: white;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+}
+
+nav > ul a.animation-underline:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+}
+
 nav > ul li {
+    cursor: pointer;
     list-style: none;
     color: white;
-    
 }
+
 
 .no-scroll {
     overflow: hidden;
