--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,18 @@
 @font-face {
-    font-family: LovalinaRegular;
-    src: url("/fonts/LovalinafreeRegular.otf");
+    font-family: DivineBeauty;
+    src: url("/fonts/Divinebeautysansdemo.otf");
 }
 
 * {
-    font-family: LovalinaRegular;
+    font-family: DivineBeauty;
+    font-size: large;
+    box-sizing: border-box;
+}
+
+html {
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
 .logo {
@@ -13,24 +21,15 @@
     margin-right: -25px;
 }
 
-header {
-    left: 0;
-    top: 0;
-    position: absolute;
-    width: 100%;
-    background-color: rgb(165, 145, 130);
-}
-
 nav {
-    width: 100%;
-    height: 75px;
-    display: inline-flex;
+    max-width: 100vw;
+    height: 7vh;
     background-color: rgb(165, 145, 130);
 }
 
 nav > ul {
-    width: max-content;
-    min-width: max-content;
+    width: min-content;
+    min-width: 90vw;
     margin: 0 auto;
     padding: 0;
     display: inline-flex;
@@ -73,7 +72,6 @@ nav > ul li {
     list-style: none;
     color: white;
 }
-
 
 .no-scroll {
     overflow: hidden;
