--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-    margin-top: 50px;
+    margin-top: 8%;
     height: 100vh;
     width: 100vw;
     background-image: url(/imgs/us.jpg);
