--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,30 @@
     src: url("/fonts/Divinebeautysansdemo.otf");
 }
 
+@media (max-width: 1000px) or (min-width: 1000px) {
+    nav {
+        height: 15vh;
+    }
+}
+
+@media (max-width: 1000px) and (min-width: 800px) and (min-height: 1000px) {
+    nav {
+        height: 10vh;
+    }
+}
+
+@media (max-width: 600px) and (max-height: 800px){
+    nav {
+        height: 20vh;
+    }
+}
+
+@media (min-width: 1000px) and (max-width: 1300px) and (max-height: 1200px) {
+    nav {
+        height: 20vh;
+    }
+}
+
 * {
     font-family: DivineBeauty;
     font-size: large;
@@ -23,7 +47,6 @@ html {
 
 nav {
     max-width: 100vw;
-    height: 7vh;
     background-color: rgb(165, 145, 130);
     margin-top: -15px;
 }
