--- a/styles/main.css
+++ b/styles/main.css
@@ -3,25 +3,8 @@
     src: url("/fonts/Divinebeautysansdemo.otf");
 }
 
-@media (max-width: 1000px) or (min-width: 1000px) {
-    nav {
-        height: 15vh;
-    }
-}
 
-@media (max-width: 1000px) and (min-width: 800px) and (min-height: 1000px) {
-    nav {
-        height: 10vh;
-    }
-}
-
-@media (max-width: 600px) and (max-height: 800px){
-    nav {
-        height: 20vh;
-    }
-}
-
-@media (min-width: 1000px) and (max-width: 1300px) and (max-height: 1200px) {
+@media (min-width: 1000px) and (max-width: 1300px) and (min-height: 1000px) and (max-height: 1200px) {
     nav {
         height: 20vh;
     }
@@ -54,7 +37,6 @@ html {
 nav {
     max-width: 100vw;
     background-color: rgb(165, 145, 130);
-    margin-top: -15px;
 }
 
 nav > ul {
@@ -69,17 +51,18 @@ nav > ul {
 }
 
 
-nav > ul a {
+a {
     margin: 25px;
     padding: 5px;
     text-decoration: none;
+    color: white;
 }
 
-nav > ul a.animation-underline {
+nav > ul .animation-underline {
     position: relative;
 }
 
-nav > ul a.animation-underline::before {
+nav > ul .animation-underline::before {
     background-color: white;
     content: "";
     position: absolute;
@@ -92,15 +75,13 @@ nav > ul a.animation-underline::before {
     transition: all 0.3s ease-in-out 0s;
 }
 
-nav > ul a.animation-underline:hover::before {
+nav > ul .animation-underline:hover::before {
     visibility: visible;
     transform: scaleX(1);
 }
 
 nav > ul li {
-    cursor: pointer;
     list-style: none;
-    color: white;
 }
 
 .no-scroll {
