--- a/styles/index.css
+++ b/styles/index.css
@@ -24,5 +24,5 @@ main > div > * {
     margin: 0 auto;
     color: white;
     text-shadow: 4px 3px 3px black;
-    font-size: revert;
+    font-size: 45px;
 }
