Painfully made new menu In raw CSS, done with animations just because I can

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,9 +16,64 @@
     }
 }
 
+@media (max-width: 1000px) {
+    .logo {
+        background-color: rgb(165, 145, 130);
+        visibility: visible;
+        display: inline;
+        /* border-radius: 100%; */
+        box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
+        border-radius: 5px;
+    }
+
+    nav {
+        position: absolute;
+        border-radius: 100%;
+        max-width: 100px;
+        background-color: unset;
+        cursor: pointer;
+    }
+
+    nav > ul {
+        background-color: rgb(165, 145, 130);
+        display: none;
+        opacity: 0;
+        filter: blur(4px);
+        max-width: 80vw;
+        box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
+        border-radius: 5px;
+    }
+
+    nav > ul > li {
+        margin-top: 3px;
+        width: max-content;
+        opacity: 0;
+        filter: blur(4px);
+    }
+    
+}
+
+@media (min-width: 1001px) {
+    .logo {
+        display: contents;
+        visibility: hidden;
+        margin: 0;
+    }
+
+    nav {
+        margin: 3vh 0;
+        max-width: 100vw;
+        background-color: rgb(165, 145, 130);
+    }
+
+    nav > ul {
+        display: inline-flex;
+    }
+}
+
 * {
     font-family: DivineBeauty;
-    font-size: large;
+    font-size: 20px;
     box-sizing: border-box;
 }
 
@@ -29,22 +84,61 @@ html {
 }
 
 .logo {
-    width: 150px;
+    width: 120px;
     height: auto;
-    margin-right: -25px;
+    transition: width 0.6s ease-in-out 0s;
 }
 
-nav {
-    max-width: 100vw;
-    background-color: rgb(165, 145, 130);
+#logo_checkbox { 
+    display:none;
+}
+
+#logo_checkbox:checked ~ ul {
+    display: flex;
+    animation: fade-in 0.2s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#logo_checkbox:checked ~ ul>li:nth-child(1) {
+    animation: fade-in 0.2s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+#logo_checkbox:checked ~ ul>li:nth-child(2) {
+    animation: fade-in 0.2s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+#logo_checkbox:checked ~ ul>li:nth-child(3) {
+    animation: fade-in 0.2s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+#logo_checkbox:checked ~ ul>li:nth-child(4) {
+    animation: fade-in 0.2s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+#logo_checkbox:checked ~ ul>li:nth-child(5) {
+    animation: fade-in 0.2s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+#logo_checkbox:checked ~ ul>li:nth-child(6) {
+    animation: fade-in 0.2s 2.0s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+#logo_checkbox:checked ~ ul>li:nth-child(7) {
+    animation: fade-in 0.2s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+#logo_checkbox:checked ~ label > .logo{
+    width: 50px;
+    height: auto;
 }
 
 nav > ul {
     width: min-content;
-    min-width: 90vw;
-    margin: 0 auto;
+    /* min-width: 90vw; */
+    margin: 0px auto 0;
     padding: 0;
-    display: inline-flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
@@ -91,4 +185,11 @@ nav > ul li {
 .up {
     text-transform: uppercase;
     letter-spacing: 4px;
+}
+
+@keyframes fade-in {
+    100% {
+        opacity: 1;
+        filter: blur(0);
+    }
 }
