--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,6 @@
         background-color: rgb(165, 145, 130);
         visibility: visible;
         display: inline;
-        /* border-radius: 100%; */
         box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
         border-radius: 5px;
     }
@@ -29,19 +28,20 @@
     nav {
         position: absolute;
         border-radius: 100%;
-        max-width: 100px;
         background-color: unset;
         cursor: pointer;
     }
 
     nav > ul {
+        margin: 0;
         background-color: rgb(165, 145, 130);
         display: none;
         opacity: 0;
         filter: blur(4px);
-        max-width: 80vw;
+        max-width: 100vw;
         box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
         border-radius: 5px;
+        transition: margin 0s ease-in-out;
     }
 
     nav > ul > li {
@@ -86,7 +86,7 @@ html {
 .logo {
     width: 120px;
     height: auto;
-    transition: width 0.6s ease-in-out 0s;
+    transition: width 0.6s ease-in-out 0s, margin 0.6s ease-in-out 0s;
 }
 
 #logo_checkbox { 
@@ -95,10 +95,11 @@ html {
 
 #logo_checkbox:checked ~ ul {
     display: flex;
-    animation: fade-in 0.2s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    margin: 0 auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    animation: fade-in 0.2s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 #logo_checkbox:checked ~ ul>li:nth-child(1) {
@@ -132,6 +133,7 @@ html {
 #logo_checkbox:checked ~ label > .logo{
     width: 50px;
     height: auto;
+    margin-left: 85vw;
 }
 
 nav > ul {
