--- a/styles/main.css
+++ b/styles/main.css
@@ -4,19 +4,6 @@
 }
 
 
-@media (min-width: 1000px) and (max-width: 1300px) and (min-height: 1000px) and (max-height: 1200px) {
-    nav {
-        height: 20vh;
-    }
-}
-
-@media (min-width: 1000px) and (min-height:1300px) {
-    nav {
-        height: 9vh;
-    }
-}
-
-
 /* For small screens and mobile devices */
 @media (max-width: 1000px) {
     .logo {
@@ -36,23 +23,73 @@
     }
 
     nav > ul {
-        margin: 0;
+        position: absolute;
+        left: 35vw;
         background-color: rgb(165, 145, 130);
-        display: none;
-        opacity: 0;
-        filter: blur(4px);
-        max-width: 100vw;
+        max-width: 30vw;
         box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
         border-radius: 5px;
-        transition: margin 0s ease-in-out;
+        transform: scale(inherit);
+        animation: menu-unfill 0.7s both;
     }
 
     nav > ul > li {
         margin-bottom: 30px;
+        padding: 10px;
         width: max-content;
         opacity: 0;
         filter: blur(4px);
         cursor: pointer;
+    }
+
+    nav > ul > li:last-of-type {
+        margin-bottom: 0;
+    }
+
+    .logo {
+        width: 120px;
+        height: auto;
+        transition: width 0.6s ease-in-out 0s, margin 0.6s ease-in-out 0s;
+    }
+    
+    #logo_checkbox:checked ~ ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transform: scale(inherit);
+        animation: menu-fill 0.2s 0.7s both;
+    }
+    
+    #logo_checkbox:checked ~ ul>li:nth-child(2) {
+        animation: fade-in 0.2s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    }
+    
+    #logo_checkbox:checked ~ ul>li:nth-child(3) {
+        animation: fade-in 0.2s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    }
+    
+    #logo_checkbox:checked ~ ul>li:nth-child(4) {
+        animation: fade-in 0.2s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    }
+    
+    #logo_checkbox:checked ~ ul>li:nth-child(5) {
+        animation: fade-in 0.2s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    }
+    
+    #logo_checkbox:checked ~ ul>li:nth-child(6) {
+        animation: fade-in 0.2s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    }
+    
+    #logo_checkbox:checked ~ ul>li:nth-child(7) {
+        animation: fade-in 0.2s 2.0s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    }
+    
+    
+    #logo_checkbox:checked ~ label > .logo{
+        width: 50px;
+        height: auto;
+        margin-left: calc(100vw - 50px);
     }
     
 }
@@ -66,14 +103,25 @@
     }
 
     nav {
-        margin: 3vh 0;
+        position: relative;
+        z-index: 2;
+        margin: 0;
         max-width: 100vw;
+        height: 10vh;
         background-color: rgb(165, 145, 130);
+        min-width: 100vw;
+        box-shadow: 5px 10px 15px 2px rgba(0,0,0,0.3);
     }
 
     nav > ul {
+        margin-top: 3vh;
         display: inline-flex;
         min-width: 90vw;
+        transform: scale(1) !important;
+    }
+
+    nav > ul > li {
+        min-width: max-content;
     }
 }
 
@@ -87,66 +135,16 @@ html {
     max-width: 100vw;
     max-height: 100vh;
     overflow: hidden;
-}
-
-.logo {
-    width: 120px;
-    height: auto;
-    transition: width 0.6s ease-in-out 0s, margin 0.6s ease-in-out 0s;
+    background-color: white;
 }
 
 #logo_checkbox { 
     display:none;
 }
 
-#logo_checkbox:checked ~ ul {
-    display: flex;
-    margin: 0 auto;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    animation: fade-in 0.2s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#logo_checkbox:checked ~ ul>li:nth-child(1) {
-    animation: fade-in 0.2s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#logo_checkbox:checked ~ ul>li:nth-child(2) {
-    animation: fade-in 0.2s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#logo_checkbox:checked ~ ul>li:nth-child(3) {
-    animation: fade-in 0.2s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#logo_checkbox:checked ~ ul>li:nth-child(4) {
-    animation: fade-in 0.2s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#logo_checkbox:checked ~ ul>li:nth-child(5) {
-    animation: fade-in 0.2s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#logo_checkbox:checked ~ ul>li:nth-child(6) {
-    animation: fade-in 0.2s 2.0s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#logo_checkbox:checked ~ ul>li:nth-child(7) {
-    animation: fade-in 0.2s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#logo_checkbox:checked ~ label > .logo{
-    width: 50px;
-    height: auto;
-    margin-left: calc(100vw - 50px);
-}
-
 nav > ul {
-    width: min-content;
-    
-    margin: 0px auto 0;
-    padding: 0;
+    /* width: min-content; */
+    padding: 15px;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
@@ -193,6 +191,25 @@ nav > ul li {
 .up {
     text-transform: uppercase;
     letter-spacing: 4px;
+}
+
+@keyframes menu-fill {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes menu-unfill {
+    0% {
+        
+        transform: scale(inherit);
+    }
+    100% {
+        transform: scale(0);
+    }
 }
 
 @keyframes fade-in {
