--- a/styles/rsvp.css
+++ b/styles/rsvp.css
@@ -11,10 +11,34 @@ main {
     width: 100%;
     height: 92vh;
     color:rgb(165, 145, 130);
+    display:flex;
+    justify-content: space-around;
+}
+
+main > div:first-of-type {
+    position: absolute;
+    top: 15vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+main > div > h1 {
+    font-size: 30px;
+}
+
+main > div > h3 {
+    font-size: 24px;
+}
+
+main > div > span {
+    border-top: 1px solid rgb(165, 145, 130);
+    width: 200%;
 }
 
 #container {
-    margin-top: 10vh;
+    margin-top: 30vh;
 }
 
 article {
@@ -26,6 +50,11 @@ article {
 
 aside {
     float: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 25px;
 }
 
 fieldset {
