--- a/styles/rsvp.css
+++ b/styles/rsvp.css
@@ -13,6 +13,7 @@ main {
     color:rgb(165, 145, 130);
     display:flex;
     justify-content: space-around;
+    overflow: scroll;
 }
 
 main > div:first-of-type {
@@ -52,24 +53,84 @@ aside {
     float: right;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    padding-left: 25px;
     align-items: center;
-    padding: 25px;
+    justify-content: space-around;
+}
+
+form {
+    display: grid;
+    row-gap: 2vh;
+    column-gap: 5vw;
 }
 
 fieldset {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 2vh;
     border: 0px;
+    display: grid;
+    row-gap: 2vh;
+    column-gap: 5vw;
+}
+
+fieldset > input {
+    /* display:none; */
+}
+
+fieldset > label {
+    cursor: pointer;
+    grid-column: 2;
+    grid-row: 1;
+    width: min-content;
+    font-size: 30px;
+}
+
+.check_box {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: rgb(165, 145, 130);
+    width: 30px;
+    height: 30px;
+    margin: 0 20px;
+    border-radius: 10px;
+    box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
+}
+
+.first {
+    grid-column: 1;
+}
+
+.po {
+    display: none;
 }
 
 label {
-    float: left;
-    clear: right;
+    grid-column: 1;
+    width: 10vw;
 }
 
 input {
-    float: right;
+    grid-column: 2;
+    border-radius: 10px;
+    background-color:rgb(165, 145, 130);
+    border: 0;
+    color: white;
+    border:0px solid rgb(165, 145, 130);
+    outline: none;
+    height: 5vh;
+    box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
+}
+
+input:focus {
+    box-shadow: 0px 10px 5px rgba(0,0,0,0.2), 2px 7px 10px rgba(0,0,0,0.19);
 }
 
 input[type="submit"] {
-    clear: right;
+    padding: 5px 10px;
+    height:max-content;
+    width: max-content;
+    grid-column: 2;
+    text-align: center;
+    color: white;
 }
