--- a/styles/rsvp.css
+++ b/styles/rsvp.css
@@ -14,11 +14,13 @@ main {
     display:flex;
     justify-content: space-around;
     overflow: scroll;
+    flex-direction: column;
 }
 
 main > div:first-of-type {
-    position: absolute;
-    top: 15vh;
+    position: relative;
+    margin-top: 20vh;
+    margin-bottom: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,22 +37,22 @@ main > div > h3 {
 
 main > div > span {
     border-top: 1px solid rgb(165, 145, 130);
-    width: 200%;
+    width: 50%;
 }
 
 #container {
-    margin-top: 30vh;
+    margin-top: 15vh;
 }
 
 article {
     float: left;
     border-right: 1px solid rgb(165, 145, 130);
     max-width: 50vw;
+    width: 50vw;
     padding: 20px 20px 20px 40px;
 }
 
 aside {
-    float: right;
     display: flex;
     flex-direction: column;
     padding-left: 25px;
@@ -71,19 +73,24 @@ fieldset {
     border: 0px;
     display: grid;
     row-gap: 2vh;
-    column-gap: 5vw;
+    column-gap: 0;
 }
 
-fieldset > input {
-    /* display:none; */
+fieldset > div {
+    width: 3vw;
+    height: 3vw;
+}
+
+fieldset > label > input {
+    display: none;
 }
 
 fieldset > label {
-    cursor: pointer;
-    grid-column: 2;
+    grid-column: 3;
     grid-row: 1;
     width: min-content;
     font-size: 30px;
+    cursor: pointer;
 }
 
 .check_box {
@@ -95,6 +102,33 @@ fieldset > label {
     margin: 0 20px;
     border-radius: 10px;
     box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
+    
+}
+
+.check_box::before, .check_box::after {
+    position: relative;
+    display: block;
+    top: 13px;
+    right: 2px;
+    width: 35px;
+    height: 2px;
+    border-radius: 100%;
+    content: "";
+    background-color: white;
+    visibility: hidden;
+}
+
+.check_box::after {
+    transform: rotate(-47deg);
+    top: 12px;
+}
+
+.check_box::before {
+    transform: rotate(45deg);
+}
+
+fieldset > label > input:checked ~ .check_box::before, fieldset > label > input:checked ~ .check_box::after {
+    visibility: visible;
 }
 
 .first {
