--- a/styles/main.css
+++ b/styles/main.css
@@ -61,7 +61,7 @@
         justify-content: center;
         align-items: center;
         scale: inherit;
-        animation: menu-fill 0.2s 0.7s both;
+        animation: menu-fill 0.2s 0.7s forwards;
     }
     
     #logo_checkbox:checked ~ ul>li:nth-child(2) {
