--- a/styles/rsvp.css
+++ b/styles/rsvp.css
@@ -1,19 +1,92 @@
+@media (max-width: 1000px) {
+    html {
+        overflow: hidden;
+    }
+    
+    body {
+        overflow: scroll;
+        padding-bottom: 20px;
+        width: 100vw;
+        height: 100vh;
+    }
+
+    main {
+        margin-top: 20px;
+        overflow: visible;
+        height: 100vh;
+    }
+
+    #container {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    aside {
+        width: 90vw;
+    }
+
+    article {
+        width: 90vw;
+    }
+
+}
+
+@media (max-height: 700px) {
+    main {
+        margin-top: 25vh;
+    }
+}
+
+
+@media (min-height: 1000px) {
+    main {
+        margin: 0;
+    }
+}
+
+@media (min-width: 1000px) {
+    body {
+        background-color: rgb(165, 145, 130);
+    }
+
+    main {
+        overflow: scroll;
+        margin: 0;
+        height: 92vh;
+    }
+
+    #container {
+        margin-top: 15vh;
+    }
+
+    article {
+        float: left;
+        border-right: 1px solid rgb(165, 145, 130);
+        max-width: 50vw;
+        width: 50vw;
+        padding: 20px 20px 20px 40px;
+    }
+
+    aside {
+        padding-left: 25px;
+    }
+}
+
+
 body {
     margin: 0;
-    background-color: rgb(165, 145, 130);
 }
 
 main {
-    margin: 0;
     background-color: white;
     max-width: 100vw;
-    max-height: 92vh;
+    max-height: 200vh;
     width: 100%;
-    height: 92vh;
+    
     color:rgb(165, 145, 130);
     display:flex;
     justify-content: space-around;
-    overflow: scroll;
     flex-direction: column;
 }
 
@@ -40,22 +113,10 @@ main > div > span {
     width: 50%;
 }
 
-#container {
-    margin-top: 15vh;
-}
-
-article {
-    float: left;
-    border-right: 1px solid rgb(165, 145, 130);
-    max-width: 50vw;
-    width: 50vw;
-    padding: 20px 20px 20px 40px;
-}
-
 aside {
     display: flex;
     flex-direction: column;
-    padding-left: 25px;
+    
     align-items: center;
     justify-content: space-around;
 }
