--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,7 @@ body {
 main {
     height: 100vh;
     width: 100vw;
-    background-image: url(/imgs/us.jpg);
+    background-image: url(/imgs/us.webp);
     background-position: 25%;
     background-repeat: no-repeat;
     background-size: cover;
